[tool.poetry]
name = "enciphey"
version = "0.1.2rc1"
description = "Randomly chooses an encryption"
authors = ["Brandon <brandon@skerritt.blog>"]
license = "MIT"

[tool.poetry.scripts]
enciphey = "src.enciphey:main"

[tool.poetry.dependencies]
python = "^3.8"
unicode = "^2.7"
cipheycore = {version = "^0.3.0", allow-prereleases = true}
cipheydists = {version = "^0.3.22", allow-prereleases = true}
nltk = "^3.5"
rich = "^8.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
